--- a/web/estudiante/3-evaluacion-anteproyecto.xhtml
+++ b/web/estudiante/3-evaluacion-anteproyecto.xhtml
@@ -12,11 +12,11 @@
 
             <ui:define name="menuprincipal">
                 <p:breadCrumb styleClass="migaDePan">
-                    <p:menuitem value="Estudiante" outcome="vista-estudiante" />                                        
-                    <p:menuitem value="Estudiante" outcome="vista-estudiante" />                    
-                    <p:menuitem value="Trabajos de Grado" outcome="vista-estudiante" />                        
+                    <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                                        
+                    <p:menuitem value="Estudiante" outcome="./../perfiles/vista-estudiante.xhtml" />                    
+                    <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-estudiante.xhtml" />                        
                     <p:menuitem value="Fases del Trabajo de Grado" 
-                                outcome="vista-estudiante" />
+                                outcome="./../perfiles/vista-estudiante.xhtml" />
                     <p:menuitem value="3 Evaluacion del Anteproyecto" 
                                 outcome="3-evaluacion-anteproyecto" />
                 </p:breadCrumb>
@@ -25,16 +25,9 @@
             <ui:define name="title">                                
             </ui:define>
 
-            <ui:define name="body">                                               
-
-                <h:form>                                                           
-
-                    <p:menu styleClass="menuizqroles" style="background-color: white">
-                        <p:submenu label="Perfiles" style="background-color: white">
-                            <p:menuitem value="Estudiante" outcome="vista-estudiante" style="background-color: #c2dfef" />                            
-                        </p:submenu>                                
-                    </p:menu>
-
+            <ui:define name="body">                                          
+                #{menuController.setOutPerfiles(true)}
+                <h:form>                                                                         
                     <p:panel styleClass="paneltrabajo" >
                         <div class="tituloContenido">                        
                             #{estudianteViewController.entityTrabajo.trabajonombre}
@@ -50,7 +43,7 @@
                                 <p:graphicImage value="../resources/img/5.png" style="width: 96px;" />
                                 <p:graphicImage value="../resources/img/6.png" style="width: 96px;" />                        
 
-                                <p:button value="Presentación de la Idea" outcome="vista-estudiante" style="width: 105px;height: 96px; font-size: 13px;" disabled="#{trabajodegradoController.fases.primeraFase}" />                            
+                                <p:button value="Presentación de la Idea" outcome="./../perfiles/vista-estudiante.xhtml" style="width: 105px;height: 96px; font-size: 13px;" disabled="#{trabajodegradoController.fases.primeraFase}" />                            
 
                                 <p:button value="Realización del Anteproyecto" outcome="2-realizacion-anteproyecto" disabled="#{trabajodegradoController.fases.segundaFase}" style="width: 105px; height: 96px; font-size: 13px;" />
 
@@ -74,7 +67,7 @@
                             </p:commandButton>-->
                             <h:panelGrid columns="3" cellpadding="5" cellspacing="5">
                                 <h:outputText value="Formato B (Evaluador 1):" style="font-weight: bold;" />                                                                                                
-                                <p:button value="Ver" icon="ui-icon-comment" href="ver-formato-B.xhtml" style="width: 120px;" />
+                                <p:button value="Ver" icon="ui-icon-comment" href="./../vistas-documentos/ver-formato-B.xhtml" style="width: 120px;" />
                                 <p:commandButton id="btndesc1" value="Descargar" rendered="#{anteproyecto.filedown != null}" disabled="#{trabajodegradoController.btnVerFormatoB1()}" 
                                                  ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
                                                  icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
