--- a/web/secretaria/diligenciar-acta-resolucion.xhtml
+++ b/web/secretaria/diligenciar-acta-resolucion.xhtml
@@ -13,10 +13,13 @@
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
-                        <p:menuitem value="Secretaria" outcome="vista-secretaria.xhtml" />                                        
-                        <p:menuitem value="Evaluacion del Anteproyecto"  />                      
-                        <p:menuitem value="Asignacion de Acta"  />
-                    </p:breadCrumb>              
+                        <p:menuitem value="Secretaria" outcome="./../perfiles/vista-secretaria-general.xhtml" />
+                        <p:menuitem value="Secretaria" outcome="./../perfiles/vista-secretaria-general.xhtml" />
+                        <p:menuitem value="Trabajos de Grado" outcome="./../perfiles/vista-secretaria-general.xhtml" />                        
+                        <p:menuitem value="Fases del Trabajo de Grado" outcome="fase-evaluacion-anteproyecto" />
+                        <p:menuitem value="3. Evaluación del Anteproyecto" outcome="fase-evaluacion-anteproyecto" />
+                        <p:menuitem value="Asignación de Acta" />
+                    </p:breadCrumb>   
                 </h:form>
             </ui:define>
 
@@ -24,18 +27,11 @@
             </ui:define>
 
             <ui:define name="body">
-                
-                <h:form>
-                    <p:menu styleClass="menuizqroles" style="background-color: white">
-                        <p:submenu label="Perfiles" style="background-color: white">
-                            <p:menuitem value="Secretaria" outcome="vista-secretaria" style="background-color: #c2dfef" />                            
-                        </p:submenu>                                
-                    </p:menu>
-                </h:form>
+                #{menuController.setOutPerfiles(true)}
 
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
-                        <h:outputText value="Agregar Acta"/> <br/>
+                        <h:outputText value="Asignación de Acta"/> <br/>
                     </div>                 
                     <p:spacer height="30"/>                 
 
@@ -64,7 +60,7 @@
 
                             <h:panelGrid columns="2" style="margin: 0 auto;" cellpadding="8">
                                 <p:commandButton ajax="false" update="growl tablaactas" value="Guardar" action="#{actaSecretariaController.guardar()}" icon="ui-icon-disk"/>
-                                <p:button value="Cancelar"  icon="ui-icon-cancel"/>
+                                <p:button value="Cancelar" outcome="fase-evaluacion-anteproyecto" icon="ui-icon-cancel"/>
                             </h:panelGrid>
                         </p:panel>
                         <p:spacer height="20"/>
