--- a/web/coordinador/fase-presentacion-de-la-idea.xhtml
+++ b/web/coordinador/fase-presentacion-de-la-idea.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <body>
 
@@ -23,7 +24,7 @@
             </ui:define>
 
             <ui:define name="title">
-                
+
             </ui:define>
 
             <ui:define name="body">
@@ -67,7 +68,7 @@
                             </p:commandButton>-->
                             <h:panelGrid columns="3" cellpadding="5" cellspacing="5">
                                 <h:outputText value="Formato A:" style="font-weight: bold;" />
-                               <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-formato-A.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnVerFormatoA}" style="width: 120px;" />                                
+                                <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-formato-A.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnVerFormatoA}" style="width: 120px;" />                                
                                 <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnVerFormatoA}" style="width: 120px;" actionListener="#{pDFBean.generarPDF()}" oncomplete="PF('dlgVerRutina').show();" />
                                 <h:outputText value="Revisión de la idea:" style="font-weight: bold;" />
                                 <p:button value="Ver" href="../vistas-documentos/ver-formato-revision-idea.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" icon="ui-icon-comment" disabled="#{trabajodegradoController.btnVerRevisionFormatoA}" style="width: 120px;" />
@@ -81,11 +82,11 @@
                 </h:form>                
                 <h:form id="frmDescargarFormatoA">
                     <p:dialog id="dlgVerRutina" header="Descargar Formato A" widgetVar="dlgVerRutina" modal="true" position="top" resizable="false" closeOnEscape="true">                            
-                      <!--  <c:if test="#{pDFBean.pdfFileName != 'sin-cargar'}">
+                        <c:if test="#{pDFBean.pdfFileName != 'sin-cargar'}">
                             <object type="application/pdf" data="#{request.contextPath}/PDFServlet/#{pDFBean.pdfFileName}" height="600px" width="820px">
                                 Your browser can't display pdf, <a href="#{request.contextPath}/PDFServlet/#{pDFBean.pdfFileName}">click</a> to download pdf instead.
                             </object>   
-                        </c:if> -->
+                        </c:if>
                     </p:dialog>        
                 </h:form> 
             </ui:define>
