--- a/web/director/3-evaluacion-anteproyecto.xhtml
+++ b/web/director/3-evaluacion-anteproyecto.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <body>
 
@@ -69,23 +70,24 @@
                             </p:commandButton>-->
                             <h:panelGrid columns="3" cellpadding="5" cellspacing="5">
                                 <h:outputText value="Formato B (Evaluador 1):" style="font-weight: bold;" />                                                                                                
-                                <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-formato-B.xhtml" style="width: 120px;" />
-                                <p:commandButton id="btndesc1" value="Descargar" rendered="#{anteproyecto.filedown != null}" disabled="#{trabajodegradoController.btnVerFormatoB1()}" 
-                                                 ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
-                                                 icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
-                                    <p:fileDownload value="#{anteproyecto.filedown}" />
-                                </p:commandButton>
+                                <p:commandButton value="Ver" icon="ui-icon-comment" actionListener="#{formatoB.btnVerFormatoBEvaluador1()}" style="width: 120px;" disabled="#{trabajodegradoController.btnVerFormatoB1()}" />
+                                <p:commandButton id="d1" value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnVerFormatoB1()}" style="width: 120px;" actionListener="#{pdfFormatoB.pdfFormatoBEvaluador1()}" oncomplete="PF('dlgVerRutina').show();"/>
 
                                 <h:outputText value="Formato B (Evaluador 2):" style="font-weight: bold;" />                                                                                                
-                                <p:button value="Ver" icon="ui-icon-comment" href="ver-formato-B_1.xhtml" disabled="#{trabajodegradoController.btnVerFormatoB2()}" style="width: 120px;" />
-                                <p:commandButton id="btndesc2" value="Descargar" rendered="#{anteproyecto.filedown != null}" disabled="#{trabajodegradoController.btnVerFormatoB2()}" 
-                                                 ajax="false" onclick="PrimeFaces.monitorDownload(mostrarestado, ocultarestado);" 
-                                                 icon="ui-icon-arrowthick-1-s" action="#{anteproyecto.preparardescarga()}">
-                                    <p:fileDownload value="#{anteproyecto.filedown}" />
-                                </p:commandButton>
+                                <p:commandButton value="Ver" icon="ui-icon-comment" actionListener="#{formatoB.btnVerFormatoBEvaluador2()}" disabled="#{trabajodegradoController.btnVerFormatoB2()}" style="width: 120px;" />
+                                <p:commandButton id="d2" value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnVerFormatoB2()}" style="width: 120px;" actionListener="#{pdfFormatoB.pdfFormatoBEvaluador2()}" oncomplete="PF('dlgVerRutina').show();"/>
                             </h:panelGrid>
                         </p:panel>
                     </p:panel>
+                </h:form>
+                <h:form id="frmDescargarFormatoA">
+                    <p:dialog id="dlgVerRutina" header="Descargar Formato B" widgetVar="dlgVerRutina" modal="true" position="top" resizable="false" closeOnEscape="true">                            
+                        <c:if test="#{pdfFormatoB.pdfFileName != 'sin-cargar'}">
+                            <object type="application/pdf" data="#{request.contextPath}/PDFServlet/#{pdfFormatoB.pdfFileName}" height="600px" width="820px">
+                                Tu navegador no puede mostrar el pdf, <a href="#{request.contextPath}/PDFServlet/#{pdfFormatoB.pdfFileName}">click</a> to download pdf instead.
+                            </object>   
+                        </c:if>
+                    </p:dialog>        
                 </h:form>
             </ui:define>
         </ui:composition>
