--- a/web/evaluador/diligenciar-formato-B.xhtml
+++ b/web/evaluador/diligenciar-formato-B.xhtml
@@ -7,9 +7,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <body>
-
         <ui:composition template="./../plantillas/plantilla.xhtml">
-            
+            <a href="../perfiles/vista-jurado.xhtml"></a>
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
@@ -22,12 +21,13 @@
                 </h:form>
             </ui:define>
 
-            <ui:define name="title">                
+            <ui:define name="title">
+                Evaluación del Anteproyecto | Diligenciar Formato B
             </ui:define>
 
             <ui:define name="body">
-                #{menuController.setOutPerfiles(true)}
-                #{formatoB.buscarEvaluador(serviciosSimcaController.nombreUsuario)}                
+                #{menuController.setOutPerfiles(true)} <!-- facelet fuera de la carpeta perfiles -->
+                #{formatoB.buscarEvaluador(serviciosSimcaController.nombreUsuario)}                                
                 
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
@@ -173,7 +173,7 @@
                                         <p:separator style="border-color: white !important;" />
 
                                         <p:outputLabel styleClass="subtitulosFormato" value="Fecha: *"> </p:outputLabel>
-                                        <p:calendar navigator="true" value="#{formatoB.fecha}" required="true" label="Fecha" pattern="dd-MM-yyyy" showOn="button" timeZone="America/Bogota" locale="es_CO" size="12" requiredMessage="Debe ingresar la fecha en que diligencia este formato." style="margin-right: 10px"/>
+                                        <p:calendar navigator="true" value="#{formatoB.fecha}" required="true" label="Fecha" pattern="dd-MM-yyyy" showOn="button" timeZone="America/Bogota" locale="es_CO" size="12" requiredMessage="Debe ingresar la fecha en que diligencia este formato." style="margin-left: 10px; margin-right: 10px"/>
 
                                         <p:separator style="border-color: white !important;" />
                                         <p:separator style="border-color: white !important;" />
@@ -193,11 +193,7 @@
 
                                         <p:fieldset legend="Titulo del trabajo de grado:" toggleable="true" styleClass="txtareaform"> 
                                             <p:outputLabel value="#{formatoB.titulo}"> </p:outputLabel>
-                                        </p:fieldset>
-
-                                        <p:fieldset legend="Número de estudiantes:" toggleable="true" styleClass="txtareaform"> 
-                                            <p:outputLabel value="#{formatoB.numEstudiantes}"> </p:outputLabel>
-                                        </p:fieldset>
+                                        </p:fieldset>                                        
 
                                         <p:fieldset legend="Nombre de los estudiantes:" toggleable="true" styleClass="txtareaform"> 
                                             <p:outputLabel value="#{formatoB.est1est2}"> </p:outputLabel>
