--- a/web/evaluador/fase-presentacion-de-la-idea.xhtml
+++ b/web/evaluador/fase-presentacion-de-la-idea.xhtml
@@ -4,12 +4,13 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <body>
 
         <ui:composition template="./../plantillas/plantilla.xhtml">
-            
+
             <ui:define name="menuprincipal">
                 <h:form>
                     <p:breadCrumb styleClass="migaDePan">
@@ -80,11 +81,11 @@
                 </h:form>                
                 <h:form id="frmDescargarFormatoA">
                     <p:dialog id="dlgVerRutina" header="Descargar Formato A" widgetVar="dlgVerRutina" modal="true" position="top" resizable="false" closeOnEscape="true">                            
-                      <!--  <c:if test="#{pDFBean.pdfFileName != 'sin-cargar'}">
+                        <c:if test="#{pDFBean.pdfFileName != 'sin-cargar'}">
                             <object type="application/pdf" data="#{request.contextPath}/PDFServlet/#{pDFBean.pdfFileName}" height="600px" width="820px">
                                 Your browser can't display pdf, <a href="#{request.contextPath}/PDFServlet/#{pDFBean.pdfFileName}">click</a> to download pdf instead.
                             </object>   
-                        </c:if> -->
+                        </c:if>
                     </p:dialog>        
                 </h:form> 
             </ui:define>
