--- a/web/evaluador/fases-trabajo-de-grado.xhtml
+++ b/web/evaluador/fases-trabajo-de-grado.xhtml
@@ -5,7 +5,8 @@
 
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <body>
 
@@ -26,7 +27,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-                
+
                 #{trabajodegradoController.setUsunomEval(serviciosSimcaController.nombreUsuario)}
                 <h:form>                    
                     <p:panel styleClass="paneltrabajo" >
@@ -63,12 +64,22 @@
                                 <h:outputText value="Formato B:" style="font-weight: bold;" />
                                 <p:button value="Diligenciar" icon="ui-icon-document" href="diligenciar-formato-B.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnDiligenciarFormatoB}" style="width: 120px;" />          
                                 <p:button value="Editar" icon="ui-icon-pencil" href="editar-formato-B.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnEditarFormatoB}" style="width: 120px;" />
-                                <p:button value="Ver" icon="ui-icon-comment" href="../vistas-documentos/ver-formato-B.xhtml?trabajoid=#{trabajodegradoController.trabajo.trabajoid}" disabled="#{trabajodegradoController.btnVerFormatoB}" style="width: 120px;" />                                
-                                <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnDescargarFormatoB}" style="width: 120px;" />
+                                <p:commandButton value="Ver" icon="ui-icon-comment" actionListener="#{formatoB.btnVerFormatoB(serviciosSimcaController.nombreUsuario)}" disabled="#{trabajodegradoController.btnVerFormatoB}" style="width: 120px;" /> 
+                                <p:commandButton value="Descargar" icon="ui-icon-arrowthickstop-1-s" disabled="#{trabajodegradoController.btnDescargarFormatoB}" style="width: 120px;" actionListener="#{pdfFormatoB.pdfFormatoBEvaluador(serviciosSimcaController.nombreUsuario)}" oncomplete="PF('dlgVerRutina').show();" />
                             </h:panelGrid>
                         </p:panel>
                     </p:panel>
-                </h:form>                
+                </h:form>      
+                <h:form id="frmDescargarFormatoA">
+                    <p:dialog id="dlgVerRutina" header="Descargar Formato B" widgetVar="dlgVerRutina" modal="true" position="top" resizable="false" closeOnEscape="true">                            
+                        <c:if test="#{pdfFormatoB.pdfFileName != 'sin-cargar'}">
+                            <object type="application/pdf" data="#{request.contextPath}/PDFServlet/#{pdfFormatoB.pdfFileName}" height="600px" width="820px">
+                                Tu navegador no puede mostrar el pdf, <a href="#{request.contextPath}/PDFServlet/#{pdfFormatoB.pdfFileName}">click</a> to download pdf instead.
+                            </object>   
+                        </c:if>
+                    </p:dialog>        
+                </h:form> 
+
             </ui:define>
 
         </ui:composition>
