--- a/web/vistas-documentos/ver-formato-B.xhtml
+++ b/web/vistas-documentos/ver-formato-B.xhtml
@@ -27,9 +27,7 @@
 
             <ui:define name="body">
                 #{menuController.setOutPerfiles(true)}
-                #{formatoB.buscarEvaluador(serviciosSimcaController.nombreUsuario)}
-                #{formatoB.prepararEdicion()}
-                
+                                
                 <p:panel styleClass="paneltrabajo" >
                     <div class="tituloContenido">                        
                         <h:outputText value="Formato B: Evaluación del Anteproyecto"/> <br/>
@@ -62,17 +60,17 @@
                                 <br />
                                 <h:panelGrid columns="2">
                                     <p:outputLabel value="Título:" styleClass="subtitulosFormato" />
-                                    <p:outputLabel value="#{formatoB.titulo}" style="margin-left: 5px"/>
+                                    <p:outputLabel value="#{formatoB.titulo}" style="margin-left: 5px" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="2">
                                     <p:outputLabel value="Estudiantes:" styleClass="subtitulosFormato" />
-                                    <p:outputLabel value="#{formatoB.est1est2}" style="margin-left: 5px"/>
+                                    <p:outputLabel value="#{formatoB.est1est2}" style="margin-left: 5px" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="2">
                                     <p:outputLabel value="Director:" styleClass="subtitulosFormato" />
-                                    <p:outputLabel value="#{formatoB.director}" style="margin-left: 5px"/>
+                                    <p:outputLabel value="#{formatoB.director}" style="margin-left: 5px" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="1">
@@ -82,53 +80,53 @@
                                 <h:panelGrid columns="3">
                                     <p:outputLabel value="A) Presentación y aportes" styleClass="subtitulosFormato"  />
                                     <p:outputLabel value="(¿Están indicados con claridad?):" styleClass="subtitulosFormato"  />
-                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoA)}"/>
+                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoA)}" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="3">
                                     <p:outputLabel value="B) Objetivos" styleClass="subtitulosFormato"  />
                                     <p:outputLabel value="(¿Establecidos claramente?):" styleClass="subtitulosFormato"  />
-                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoB)}"/>
+                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoB)}" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="3">
                                     <p:outputLabel value="C) Metodología" styleClass="subtitulosFormato"  />
                                     <p:outputLabel value="(¿Se indica explícitamente?):" styleClass="subtitulosFormato"  />
-                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoC)}"/>
+                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoC)}" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="3">
                                     <p:outputLabel value="D) Condiciones de Entrega" styleClass="subtitulosFormato"  />
                                     <p:outputLabel value="(¿Se establecen claramente?):" styleClass="subtitulosFormato"  />
-                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoD)}"/>
+                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoD)}" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="3">
                                     <p:outputLabel value="E) Monografía" styleClass="subtitulosFormato"  />
                                     <p:outputLabel value="(¿Tiene una estructura adecuada?):" styleClass="subtitulosFormato"  />
-                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoE)}"/>
+                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoE)}" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="3">
                                     <p:outputLabel value="F) Cronograma" styleClass="subtitulosFormato"  />
                                     <p:outputLabel value="(¿Se indica de forma clara y completa?):" styleClass="subtitulosFormato"  />
-                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoF)}"/>
+                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoF)}" />
                                 </h:panelGrid>
                                 <br />   
                                 <h:panelGrid columns="3">
                                     <p:outputLabel value="G) Patrocinio" styleClass="subtitulosFormato"  />
                                     <p:outputLabel value="(¿Existe?):" styleClass="subtitulosFormato"  />
-                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoG)}"/>
+                                    <p:outputLabel value="#{formatoB.elementocosiderado(formatoB.elementoConsideradoG)}" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="2">
                                     <p:outputLabel value="H) Concepto general:" styleClass="subtitulosFormato"  />
-                                    <p:outputLabel value="#{formatoB.aprobado}"/>
+                                    <p:outputLabel value="#{formatoB.aprobado}" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="2">
                                     <p:outputLabel value="Observaciones:" styleClass="subtitulosFormato"  />
-                                    <p:outputLabel value="#{formatoB.observaciones}"/>
+                                    <p:outputLabel value="#{formatoB.observaciones}" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="2">
@@ -140,7 +138,7 @@
                                 <br />                                
                                 <h:panelGrid columns="2">
                                     <p:outputLabel value="Nombre del Evaluador:" styleClass="subtitulosFormato" />
-                                    <p:outputLabel value="#{formatoB.evaluador}" styleClass="subtitulosFormato" />
+                                    <p:outputLabel value="#{formatoB.evaluador}" />
                                 </h:panelGrid>
                                 <br />
                                 <h:panelGrid columns="2" cellpadding="12" style="margin: 0 auto">
